--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   "license": "MIT",
   "dependencies": {
     "node-pre-gyp": "^0.6.36",
-    "nan": "^2.4.0"
+    "nan": "^2.4.0",
+    "parse-css-font": "^2.0.2",
+    "units-css": "^0.4.0"
   }
 }
